--- a/public/screen.html
+++ b/public/screen.html
@@ -123,7 +123,15 @@
           <div class="winnerName" id="winnerName"></div>
         </div>
 
-        <div class="footerBrand">propulsé par Starcup</div>
+       <div class="footerBrand">
+  propulsé par
+  <a
+    href="https://www.starcup.io"
+    target="_blank"
+    rel="noopener"
+    class="starcup-link"
+  >Starcup</a>
+</div>
       </div>
 
       <div class="card">
@@ -297,3 +305,4 @@
 </script>
 </body>
 </html>
+
