--- a/public/vote.html
+++ b/public/vote.html
@@ -78,7 +78,16 @@
     <div class="topbar">
       <div>
         <div class="brandTitle">STARCUP JUKEBOX LIVE</div>
-        <div class="brandSub">⭐ Expérience Starcup</div>
+        <div class="brand<div class="brandSub">
+  ⭐ Expérience
+  <a
+    href="https://www.starcup.io"
+    target="_blank"
+    rel="noopener"
+    class="starcup-link"
+  >Starcup</a>
+</div>
+Sub">⭐ Expérience Starcup</div>
       </div>
       <div class="hint" id="roomBadge">Room —</div>
     </div>
@@ -193,3 +202,4 @@
 </script>
 </body>
 </html>
+
