--- a/public/dj.html
+++ b/public/dj.html
@@ -34,7 +34,17 @@
         <div class="label" style="margin-top:14px;">Logs</div>
         <pre id="out">Prêt.</pre>
 
-        <div style="margin-top:14px" class="pill">⭐ Expérience Starcup — projection live des résultats</div>
+<div class="pill">
+  ⭐ Expérience
+  <a
+    href="https://www.starcup.io"
+    target="_blank"
+    rel="noopener"
+    class="starcup-link"
+  >Starcup</a>
+  — projection live des résultats
+</div>
+
       </div>
 
       <div class="card">
@@ -181,3 +191,4 @@
 </script>
 </body>
 </html>
+
